--- a/src/BlogProject/blog.css
+++ b/src/BlogProject/blog.css
@@ -327,8 +327,8 @@ padding-bottom: 2rem;
 padding-top: 4rem;
 border-radius: 10px;
 background: #4CA1AF;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #C4E0E5, #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);
+background: linear-gradient(to right, #C4E0E5, #4CA1AF); 
 
 }
 
@@ -355,11 +355,22 @@ background: linear-gradient(to right, #C4E0E5, #4CA1AF); /* W3C, IE 10+/ Edge, F
 }
 .form-group > input
 {
+    background:transparent;
+    border: none;
+    border-bottom: 1px solid black;
     background-color: rgb(245, 232, 209);
+}
+.form-group > input:focus{
+    background:transparent;
+    outline:none;
+    border: none;
+
 }
 .Dark-form > .form-group > input
 {
-    background-color: white;
+    background:transparent;
+    border: none;
+    border-bottom: 1px solid white;
 }
 
 
