--- a/src/BlogProject/blog.css
+++ b/src/BlogProject/blog.css
@@ -14,9 +14,8 @@ section {
 }
 
 .header-content {
-    width: 100%;
     height: 110vh;
-    background-image: url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80');
+    background-image: url('https://c4.wallpaperflare.com/wallpaper/108/140/869/digital-digital-art-artwork-fantasy-art-drawing-hd-wallpaper-preview.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -92,10 +91,6 @@ section {
 
 
 
-
-.display-box {
-    margin-top: 3rem;
-}
 
 .display-box-blogs {
     display: grid;
